--- a/interface/index.html
+++ b/interface/index.html
@@ -562,13 +562,14 @@
                     <input type="checkbox" id="follow_pc" checked="checked"/>Suivre PC
                 </div>
                 <div class="border_container">
-                    <button onclick="assemble()" id="assemble">Assemble</button><br/><br/>
+                    <button onclick="assemble()" id="assemble">Assembler</button><br/><br/>
                     <button id="run" onclick="simulate('run')" disable="disabled"><img src="./image/resume_co.gif"/></button>
                     <button id="stepin" onclick="simulate('stepinto')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
                     <button id="stepforward" onclick="simulate('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
                     <button id="stepout" onclick="simulate('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
                     <br/>
                     Animate speed:&nbsp;<input class="regVal" id="animate_speed" type="text" value="100"/>ms
+                    <input id="cycles_count" type="text" disabled="disabled" value="0"/>
                 </div>
                 <!-- Input (stdin)<br>
                 <textarea id="stdin_" name ="stdin" placeholder="your inputs here"></textarea><br>
