--- a/interface/index.html
+++ b/interface/index.html
@@ -569,7 +569,7 @@
                     <button id="stepout" onclick="simulate('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
                     <br/>
                     Animate speed:&nbsp;<input class="regVal" id="animate_speed" type="text" value="100"/>ms
-                    <input id="cycles_count" type="text" disabled="disabled" value="0"/>
+                    <input id="cycles_count" type="text" value="0"/>
                 </div>
                 <!-- Input (stdin)<br>
                 <textarea id="stdin_" name ="stdin" placeholder="your inputs here"></textarea><br>
