Added stepback button

--- a/interface/index.html
+++ b/interface/index.html
@@ -563,6 +563,7 @@
                 </div>
                 <div class="border_container">
                     <button onclick="assemble()" id="assemble">Assembler</button><br/><br/>
+                    <button id="stepback" onclick="simulate('stepback')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
                     <button id="run" onclick="simulate('run')" disable="disabled"><img src="./image/resume_co.gif"/></button>
                     <button id="stepin" onclick="simulate('stepinto')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
                     <button id="stepforward" onclick="simulate('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
