--- a/interface/index.html
+++ b/interface/index.html
@@ -569,8 +569,8 @@
                     <button id="stepforward" onclick="simulate('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
                     <button id="stepout" onclick="simulate('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
                     <br/>
-                    Animate speed:&nbsp;<input class="regVal" id="animate_speed" type="text" value="100"/>ms
-                    <input id="cycles_count" type="text" value="0"/>
+                    Vitesse d'ex&eacute;cution : &nbsp;<input class="regVal" id="animate_speed" type="text" value="100"/>ms<br/>
+                    Cycle courant : <input id="cycles_count" type="text" value="0"/>
                 </div>
                 <!-- Input (stdin)<br>
                 <textarea id="stdin_" name ="stdin" placeholder="your inputs here"></textarea><br>
@@ -619,13 +619,10 @@
 					return;
 
 				var row = e.getDocumentPosition().row ;
-                 
                 var index = $.inArray(row, asm_breakpoints);
                 if (index >= 0) {
-                    //e.editor.session.clearBreakpoint(row);
                     asm_breakpoints.splice(index, 1);
                 } else {
-                    //e.editor.session.setBreakpoint(row);
                     asm_breakpoints.push(row);
                 }
                 sendBreakpointsInstr();
@@ -801,6 +798,13 @@
                 }
             });
         }
+
+        // Help Boutons
+        $("#stepback").tooltipster({ content: 'Pas arrière (Step Back)', position: 'top' });
+        $("#run").tooltipster({ content: 'Exécuter (Run)', position: 'top' });
+        $("#stepin").tooltipster({ content: "Pas à l'intérieur (Step Into)", position: 'top' });
+        $("#stepforward").tooltipster({ content: 'Pas avant (Step Forward)', position: 'top' });
+        $("#stepout").tooltipster({ content: 'Pas en dehors (Step Out)', position: 'top' });
 
         // From editablegrid's demo
         function image(relativePath) {
