--- a/interface/index.html
+++ b/interface/index.html
@@ -631,7 +631,6 @@
             editor.on("change",  function() {
                 if (debug_marker !== null) { editor.session.removeMarker(debug_marker); }
                 $(".ace_content").css("background-color",  "#FFF3F3");
-                window.onbeforeunload = confirmOnPageExit;
             });
 
             $("input").change(function () {
@@ -902,6 +901,24 @@
             return message;
         };
 
+        // //////////
+        // Get parameters
+        function getSearchParameters() {
+              var prmstr = window.location.search.substr(1);
+              return prmstr != null && prmstr != "" ? transformToAssocArray(prmstr) : {};
+        }
+        function transformToAssocArray( prmstr ) {
+            var params = {};
+            var prmarr = prmstr.split("&");
+            for ( var i = 0; i < prmarr.length; i++) {
+                var tmparr = prmarr[i].split("=");
+                params[tmparr[0]] = tmparr[1];
+            }
+            return params;
+        }
+        var params = getSearchParameters();
+        // //////////
+
         function updateAutosave() {
             $("#autosave_menu").remove();
             choices = ""
@@ -916,6 +933,12 @@
                 }
                 $("#autosave_menu").val("-1");
             });
+        }
+
+        if (params["nowarning"] === undefined) {
+            window.onbeforeunload = confirmOnPageExit;
+        } else {
+            console.log("Disabling exit warning!");
         }
 
         autosave_index = 0;
