Added value format display select.

--- a/interface/index.html
+++ b/interface/index.html
@@ -28,6 +28,11 @@
                 <!-- <input id="bin" type="radio" name="representation" value="bin" onclick="changeBase(2);"/> bin
                 <input id="dec" type="radio" name="representation" value="dec" onclick="changeBase(10);" checked="checked" /> dec
                 <input id="hex" type="radio" name="representation" value="hex" onclick="changeBase(16);"/> hex <br> -->
+                <select id="valueformat">
+                    <option>Hexad&eacute;cimal</option>
+                    <option>D&eacute;cimal</option>
+                    <option>Binaire</option>
+                </select>
                 <div id="tab-container" class="tab-container">
                     <ul class="etabs">
                         <li class="tab"><a href="#tabs1-User">User</a></li>
