--- a/interface/index.html
+++ b/interface/index.html
@@ -535,10 +535,7 @@
                         <button id="loadFile" onclick="loadFileAsText()">Load</button>
                     </div>
                     <div style="float: right;">
-                        <button onclick="editor.setValue('');">
-                            <img src="image/cl.png" alt="Clear" style="height:30px;"/></button>
-                        <button onclick="saveTextAsFile()">
-                            <img src="image/dl.png" alt="Download" style="height:30px;"/></button>
+                        <button onclick="saveTextAsFile()"><img src="image/dl.png" alt="Download" style="height:30px;"/></button>
                     </div>
                 </div>
                 <br>
