Hide the message bar when assemble is clicked

--- a/interface/index.html
+++ b/interface/index.html
@@ -606,9 +606,7 @@
 
         // Barre de messages
         $("#message_bar").click(function(){
-          $(this).slideToggle("normal", "easeInOutBack", function(){
-            $("#show_message_bar").slideToggle("normal", "easeInOutBack");
-          });
+          $(this).slideToggle("normal", "easeInOutBack", function() {});
         });
         
         $(document).ready(function() {
